# post_tech_fase02_desafio_aula05

./: .gitignore  README.md  pyproject.toml
src/desafio_fase02_aula05/: explore.ipynb
