[tool.poetry]
name = "desafio-fase02-aula05"
version = "0.1.0"
description = ""
authors = ["juno@allienware <carlos.vneves@gmail.com>"]
readme = "README.md"
packages = [{include = "desafio_fase02_aula05", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
