[tool.poetry]
name = "desafio-fase02-aula05"
version = "0.1.0"
description = ""
authors = "Carlos Neves <carlos.vneves@gmail.com>"
readme = "README.md"
packages = [{include = "desafio_fase02_aula05", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
jupyterlab = "^4.1.0"
streamlit = "^1.31.0"
plotly = "^5.18.0"
tabulate = "^0.9.0"
yellowbrick = "^1.5"
icecream = "^2.1.3"
setuptools = "^69.1.0"
itables = "^1.7.0"
statsmodels = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
